tests/operator-without-parentheses.stderr
error: 
   ┌─ test:1:8
   │
 1 │ show 1 + 2
   │ ------ ^ - this has type `Number`
   │ │      │  
   │ │      cannot add `2` to `show 1`
   │ │      `+` consumes all expressions on either side; you may be missing parentheses
   │ │      could not find instance `Add () Number _`
   │ this has type `()`
   │ this is parsed as one single input to `+`
   │
   ┌─ <dir>/std/math.wpl:18:59
   │
18 │ add :: (Left : Number) (Right : Number) (infer Sum) where (Add Left Right Sum) => Right -> Left -> Sum
   │                                                           -------------------- required by this bound
   ·
25 │   ('a + 'b) -> add 'b 'a
   │                --- actual error occurred here
   │
   = add parentheses around `1 + 2`: `(1 + 2)`
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

error: 
   ┌─ test:2:11
   │
 2 │ show True or False
   │ --------- ^^ ----- this has type `Boolean`
   │ │         │   
   │ │         could not find instance `Or () Boolean _`
   │ │         `or` consumes all expressions on either side; you may be missing parentheses
   │ this has type `()`
   │ this is parsed as one single input to `or`
   │
   ┌─ <dir>/std/logic.wpl:57:40
   │
57 │ or' :: Left Right (infer Output) where (Or Left Right Output) => ((() -> Right) -> Left -> Output)
   │                                        ---------------------- required by this bound
   ·
64 │   ('a or 'b) -> or' (() -> 'b) 'a
   │                 --- actual error occurred here
   │
   = add parentheses around `True or False`: `(True or False)`
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

error: 
   ┌─ test:3:9
   │
 3 │ show (1 + "hi")
   │       --^-----
   │       │ │ │
   │       │ │ this has type `Text`
   │       │ cannot add `"hi"` to `1`
   │       │ could not find instance `Add Number Text Text`
   │       this has type `Text`
   │       this has type `Number`
   │
   ┌─ <dir>/std/math.wpl:18:59
   │
18 │ add :: (Left : Number) (Right : Number) (infer Sum) where (Add Left Right Sum) => Right -> Left -> Sum
   │                                                           -------------------- required by this bound
   ·
25 │   ('a + 'b) -> add 'b 'a
   │                --- actual error occurred here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

